More elegant handling of producer lists, it reacts to changes to ports list

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -45,7 +45,7 @@
       <div>
         <ul class="nav navbar-nav">
           <li><a href="index.html">Reload Page</a></li>
-          <li><a data-bind="click: getPortList" href="#">Refresh Port List</a></li>
+          <li><a data-bind="click: refreshPorts" href="#">Refresh Port List</a></li>
           <li><a data-bind="click: running()? stop : start, text:  running()? 'stop!' : 'go!' " href="#"><em>go!</em></a></li>
         </ul>
       </div>
