Changed some text

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -109,7 +109,7 @@
      </div>
       <div class="row  table-bordered"  data-bind="if: selectedRunMode().value() > 0">
           <div class="col-sm-5">
-            <h4>Base Station</h4>
+            <h4>Master Station</h4>
           </div>
           <div class="col-sm-7">
             <div data-bind="foreach: masterProducers">
