--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -66,7 +66,7 @@
                     <span data-bind="text: name"></span>
                  </div>
                 <div class="col-sm-3" data-bind="if: type()=='serial'">
-                     <select class="form-control" data-bind="options: $root.serialPortList, optionsText: 'name', value: serialPort"></select>
+                     <select class="form-control" data-bind="options: $root.ports, optionsText: 'name', value: serialPort"></select>
                 </div>
                 <div class="col-sm-3" data-bind="if: type()=='serial'">
                     <select class="form-control" data-bind="options: $root.speedOptions, value: $data.serialPort().speed"></select>
@@ -92,7 +92,7 @@
                     <span data-bind="text: name"></span>
                  </div>
                 <div class="col-sm-3" data-bind="if: type()=='serial'">
-                     <select class="form-control" data-bind="options: $root.serialPortList, optionsText: 'name', value: serialPort"></select>
+                     <select class="form-control" data-bind="options: $root.ports, optionsText: 'name', value: serialPort"></select>
                 </div>
                  <div class="col-sm-3" data-bind="if: type()=='serial'">
                     <select class="form-control" data-bind="options: $root.speedOptions, value: $data.serialPort().speed"></select>
@@ -121,7 +121,7 @@
                     <span data-bind="text: name"></span>
                  </div>
                 <div class="col-sm-3" data-bind="if: type()=='serial'">
-                     <select class="form-control" data-bind="options: $root.serialPortList, optionsText: 'name', value: serialPort"></select>
+                     <select class="form-control" data-bind="options: $root.ports, optionsText: 'name', value: serialPort"></select>
                 </div>
                  <div class="col-sm-3" data-bind="if: type()=='serial'">
                     <select class="form-control" data-bind="options: $root.speedOptions, value: $data.serialPort().speed"></select>
