--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -45,10 +45,10 @@
               <select class="form-control" data-bind="options: runModes, optionsText: 'name', value: selectedRunMode" ></select>
           </div>
           <div class="col-sm-1"></div>
-          <div class="col-sm-3" data-bind="if: selectedRunMode().value() > 0">
+          <div class="col-sm-3" data-bind="if: selectedRunMode().value() > 0 && selectedRunMode().value() < 10">
               <h4>Dynamic Model</h4>
           </div>
-          <div class="col-sm-3" data-bind="if: selectedRunMode().value() > 0">
+          <div class="col-sm-3" data-bind="if: selectedRunMode().value() > 0 && selectedRunMode().value() < 10 ">
               <select class="form-control" data-bind="options: dynModels, optionsText: 'name', value: selectedDynModel"></select>
         </div>
       </div>
@@ -107,7 +107,7 @@
            </div>
           </div>
      </div>
-      <div class="row  table-bordered"  data-bind="if: selectedRunMode().value() > 0">
+      <div class="row  table-bordered"  data-bind="if: selectedRunMode().value() > 0 && selectedRunMode().value() < 10">
           <div class="col-sm-5">
             <h4>Master Station</h4>
           </div>
