--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <nav class="navbar navbar-default">
       <div class="navbar-header">
-        <em><a class="navbar-brand active" href="#">goGPS</a></em>
+        <em><a class="navbar-brand active" href="#">goGPS_FX 0.4</a></em>
       </div>
       <div>
         <ul class="nav navbar-nav">
