Added Coarse Time mode and version number

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -39,7 +39,7 @@
   <div class="container">
     <nav class="navbar navbar-default">
       <div class="navbar-header">
-        <em><a class="navbar-brand active" href="#">goGPS_FX 0.5</a></em>
+        <em class="navbar-brand active" href="#" >goGPS_FX <span data-bind="text: version"/></em>
       </div>
       <div>
         <ul class="nav navbar-nav">
