--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -113,8 +113,8 @@
                  <div class="col-sm-7" data-bind="if: type()=='file'">
                     <input class="form-control" data-bind="textInput: filename"></input>
                 </div>                 
-                <div class="col-sm-5" data-bind="if: type()=='ftp'">
-                    GARNER_NAVIGATION_AUTO
+                <div class="col-sm-7" data-bind="if: type()=='ftp'">
+                	<select class="form-control" data-bind="options: $root.ftps, optionsText: 'name', value: $root.selectedNavigationFTP"></select>
                 </div>
              </div>
            </div>
