Renamed FTPSites property, perform initialization id Preferences fail to parse

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -114,7 +114,7 @@
                     <input class="form-control" data-bind="textInput: filename"></input>
                 </div>                 
                 <div class="col-sm-7" data-bind="if: type()=='ftp'">
-                	<select class="form-control" data-bind="options: $root.ftps, optionsText: 'name', value: $root.s().navigationFTP"></select>
+                	<select class="form-control" data-bind="options: $root.ftpSites, optionsText: 'name', value: $root.s().navigationFTP"></select>
                 </div>
              </div>
            </div>
