--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -39,7 +39,7 @@
   <div class="container">
     <nav class="navbar navbar-default">
       <div class="navbar-header">
-        <em class="navbar-brand active" href="#" >goGPS_FX <span data-bind="text: s().version"/></em>
+        <em class="navbar-brand active" href="#" >goGPS_FX <span data-bind="text: p().version"/></em>
       </div>
       <div>
         <ul class="nav navbar-nav">
@@ -55,14 +55,14 @@
             <h4>Mode</h4>
         </div>
           <div class="col-sm-4">
-              <select class="form-control" data-bind="options: runModes, optionsText: 'name', optionsValue: 'value', value: s().runMode" ></select>
+              <select class="form-control" data-bind="options: runModes, optionsText: 'name', optionsValue: 'value', value: p().runMode" ></select>
           </div>
           <div class="col-sm-1"></div>
-          <div class="col-sm-3" data-bind="if: s().runMode() > 0 && s().runMode() < 10">
+          <div class="col-sm-3" data-bind="if: p().runMode() > 0 && p().runMode() < 10">
               <h4>Dynamic Model</h4>
           </div>
-          <div class="col-sm-3" data-bind="if: s().runMode() > 0 && s().runMode() < 10 ">
-              <select class="form-control" data-bind="options: dynModels, optionsText: 'name', optionsValue: 'value', value: s().dynModel"></select>
+          <div class="col-sm-3" data-bind="if: p().runMode() > 0 && p().runMode() < 10 ">
+              <select class="form-control" data-bind="options: dynModels, optionsText: 'name', optionsValue: 'value', value: p().dynModel"></select>
         </div>
       </div>
       <div class="row  table-bordered">
@@ -73,7 +73,7 @@
             <div data-bind="foreach: observationProducers">
                 <div class="row table-bordered">
                   <div class="col-sm-1">
-                    <input type="radio" data-bind="checkedValue: $data, checked: $root.s().observationProducer" />
+                    <input type="radio" data-bind="checkedValue: $data, checked: $root.p().observationProducer" />
                   </div>
                   <div class="col-sm-4 other">
                     <span data-bind="text: name"></span>
@@ -99,7 +99,7 @@
             <div data-bind="foreach: navigationProducers">
                 <div class="row  table-bordered">
                   <div class="col-sm-1">
-                    <input type="radio" data-bind="checkedValue: $data, checked: $root.s().navigationProducer" />
+                    <input type="radio" data-bind="checkedValue: $data, checked: $root.p().navigationProducer" />
                   </div>
                   <div class="col-sm-4 other">
                     <span data-bind="text: name"></span>
@@ -114,13 +114,13 @@
                     <input class="form-control" data-bind="textInput: filename"></input>
                 </div>                 
                 <div class="col-sm-7" data-bind="if: type()=='ftp'">
-                	<select class="form-control" data-bind="options: $root.ftpSites, optionsText: 'name', value: $root.s().navigationProducer().ftpSite"></select>
+                	<select class="form-control" data-bind="options: $root.ftpSites, optionsText: 'name', value: $root.p().navigationProducer().ftpSite"></select>
                 </div>
              </div>
            </div>
           </div>
      </div>
-      <div class="row  table-bordered"  data-bind="if: s().runMode() > 0 && s().runMode() < 10">
+      <div class="row  table-bordered"  data-bind="if: p().runMode() > 0 && p().runMode() < 10">
           <div class="col-sm-5">
             <h4>Master Station</h4>
           </div>
@@ -128,7 +128,7 @@
             <div data-bind="foreach: masterProducers">
                 <div class="row  table-bordered">
                   <div class="col-sm-1">
-                    <input type="radio" data-bind="checkedValue: $data, checked: $root.s().masterProducer" />
+                    <input type="radio" data-bind="checkedValue: $data, checked: $root.p().masterProducer" />
                   </div>
                   <div class="col-sm-4 other">
                     <span data-bind="text: name"></span>
@@ -154,7 +154,7 @@
             <h4>Output Folder</h4>
           </div>
           <div class="col-sm-2">
-              <input class="form-control" data-bind="textInput: s().outputFolder"></input>
+              <input class="form-control" data-bind="textInput: p().outputFolder"></input>
           </div>
        </div>     
        <div class="row ">
